# litestar-template

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  schema.prisma
.github/workflows/: deploy.yml
src/litestar_project/: app.py  router.py  server.py  settings.py
src/litestar_project/api/: model.py  system.py
src/litestar_project/repository/: base.py  model.py
src/scripts/: setup-test.sh  test.py
tests/: conftest.py
tests/api/: test_model.py  test_system.py
tests/repository/: test_base.py
