[project]
name = "litestar_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.14.0",
]

[dependency-groups]
dev = [
    "click>=8.1.8",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]
