[project]
name = "litestar_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.14.0",
    "prisma>=0.15.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
]

[project.scripts]
server = "litestar_project.server:run"
test = "scripts.test:run"

[dependency-groups]
dev = [
    "click>=8.1.8",
    "mypy>=1.15.0",
    "prisma>=0.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
packages = ["src/litestar_project", "src/scripts"]
